Remove S6 stuff